--- a/TarjetaSube/TarjetaSube.csproj
+++ b/TarjetaSube/TarjetaSube.csproj
@@ -1,8 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <OutputType>Exe</OutputType>
+    <StartupObject>TarjetaSube.TestsMedioBoleto</StartupObject>
   </PropertyGroup>
-
 </Project>
